# Terminal-Physics

./: .gitignore  CMakeLists.txt  LICENSE
include/: GameLoop.h  Object.h  Shape.h  TVector.h  Window.h  gameElements.h  utils.h
src/: GameLoop.cpp  Object.cpp  Shape.cpp  TVector.cpp  Window.cpp  gameElements.cpp  main.cpp  utils.cpp
tests/: test_shape.cpp
